--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/home/neko/workspace/LAMA/BCM4Java-30012020.jar"/>
-	<classpathentry kind="lib" path="/home/neko/workspace/LAMA/javassist.jar"/>
+	<classpathentry kind="lib" path="javassist.jar"/>
+	<classpathentry kind="lib" path="BCM4Java-30012020.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
