--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,8 @@
-/plugins/
-/components/
-/ports/
-/launcher/
 /annexes/
+/components/
+/connectors/
+/interfaces/
+/launcher/
+/plugins/
+/ports/
+/tests/
